--- a/home.html
+++ b/home.html
@@ -59,38 +59,13 @@
          <p class="location"><a href="assets/ttt.html" target="_blank">TicTacToe</a></p>
          <p class="location"><a href="assets/calc.html" target="_blank">Calculator</a></p>
          <p class="location"><a href="assets/phlogo.html" target="_blank">Logo Maker</a></p>
-         <p class="icons animated pulse">
-            <a href="https://t.me/hyzerdev" target="_blank">
-            <span class="fa-stack fa-lg">
-                <i class="fa fa-circle-thin fa-3x fa-stack-2x"></i>     
-                <i class="fa fa-telegram fa-stack-1x"></i>
-            </span>
-            </a>
-            <a href="https://instagram.com/sius_psrb" target="_blank">
-            <span class="fa-stack fa-lg">
-                <i class="fa fa-circle-thin fa-stack-2x"></i>
-                <i class="fa fa-instagram fa-stack-1x"></i>
-            </span>
-            </a>
-            <a href="https://wa.me/62877688861488" target="_blank">
-            <span class="fa-stack fa-lg">
-                <i class="fa fa-circle-thin fa-stack-2x"></i>
-                <i class="fa fa-whatsapp fa-stack-1x"></i>
-             </span>
-            </a>
-           <a href="https://github.com/Hyzerr" target="_blank">
-            <span class="fa-stack fa-lg">
-                <i class="fa fa-circle-thin fa-stack-2x"></i>
-                <i class="fa fa-github fa-stack-1x"></i>
-             </span>
-            </a>
-         </p>
+         <p class="location"><a href="https://github.com/Hyzerr/Hyzer-MD" target="_blank">Proyek Bot</a></p>
+         <p class="location"><a href="https://chat.whatsapp.com/IxBejqgYlXKENKPJsF7EOP" target="_blank">Group Official</a></p>
       </div>
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <center><div class="bannerad"><div class="title970"><b><marquee scrolldelay="5" scrollamount="2" style="border:2px solid;" direction="left" behavior="scroll" width="80%"><font color="white" face="Tahoma" size="4">    MY LIFE IS NULL AND VOID   </font></marquee><p align="center"></p></b></div></div>
       <audio id="music" autoplay loop> 
-   <source src="song.mp3" type="audio/mp3"> 
+   <source src="assets/music.mp3" type="audio/mp3"> 
   </audio> 
     
     <!--Fix Mau Nyolong-->
