--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<div class="header_links">
 							<ul class="nav_links">
 							    <strong>
-								<li class="nav_link"><a href="home.html">ABOUT</a></li>
+								<li class="nav_link"><a href="assets/about.html">ABOUT</a></li>
 								<li class="nav_link"><a href="home.html">DOCS</a><br/></li>
                                 </strong>      
 							</ul>
